chapter 12: parse